[workspace]
members = ["crates/toph-proto", "crates/toph-wasm"]
resolver = "2"

[workspace.dependencies]
iroh = { version = "1", default-features = false, features = ["tls-ring"] }
iroh-base = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["use-std"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
