[package]
name = "toph-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = { workspace = true }
iroh-base = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
